# FLAREForge

./: .flake8  .gitignore  LICENSE  README.md  cpb.config.json  pyproject.toml
.github/workflows/: ci.yml
docs/design/: prism-concept.md  project-vision.md
docs/specs/: language-spec.md
src/FLAREcore/: __init__.py  ast.py  lexer.py  parser.py  semantic.py
src/prism/: __init__.py
src/tests/: __init__.py  test_lexer.py  test_parser.py  test_semantic.py
