[project]
name = "prism-lang"
version = "0.1.0"
description = "Bootstrap compiler for the Prism programming language"
authors = [
    {name = "Prism Team", email = "team@prism-lang.org"},
]
dependencies = [
    "click>=8.0.0",
    "pytest>=7.0.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
